--- a/index.html
+++ b/index.html
@@ -1,104 +1,101 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>¿Quieres ser mi San Valentín? 💖</title>
+  <meta charset="UTF-8">
+  <title>¿Quieres ser mi San Valentín? 💘</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
     body {
-      font-family: 'Arial', sans-serif;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      margin: 0;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
+      background: linear-gradient(135deg, #7f7fd5, #86a8e7, #91eae4);
+      font-family: Arial, sans-serif;
       overflow: hidden;
     }
+
     .card {
       background: white;
-      padding: 2rem 2.5rem;
+      padding: 40px;
       border-radius: 20px;
       text-align: center;
-      box-shadow: 0 20px 40px rgba(0,0,0,.2);
+      box-shadow: 0 20px 40px rgba(0,0,0,0.2);
       max-width: 350px;
     }
+
     h1 {
-      color: #e11d48;
-      margin-bottom: .5rem;
+      margin-bottom: 10px;
     }
+
     p {
-      color: #444;
-      margin-bottom: 1.5rem;
+      font-size: 18px;
+      margin-bottom: 25px;
     }
-    .photos {
-      display: flex;
-      gap: .5rem;
-      justify-content: center;
-      margin-bottom: 1.5rem;
-    }
-    .photos img {
-      width: 80px;
-      height: 80px;
-      object-fit: cover;
-      border-radius: 12px;
-    }
+
     .buttons {
       position: relative;
       height: 60px;
     }
+
     button {
-      padding: .7rem 1.2rem;
+      padding: 12px 22px;
+      font-size: 16px;
       border: none;
-      border-radius: 999px;
-      font-size: 1rem;
+      border-radius: 30px;
       cursor: pointer;
     }
+
     #yes {
-      background: #e11d48;
+      background: #ff5e7e;
       color: white;
-      margin-right: .5rem;
+      margin-right: 10px;
     }
+
     #no {
-      background: #e5e7eb;
+      background: #d1d5db;
       position: absolute;
     }
   </style>
 </head>
+
 <body>
   <div class="card">
-    <h1>💘 ¿Quieres ser mi San Valentín?</h1>
-    <p>Prometo hacerte sonreír y cuidarte mucho 💕</p>
-
-    <div class="photos">
-      <!-- Reemplaza estas imágenes por las de ella -->
-      <img src="foto1.jpg" alt="foto 1">
-      <img src="foto2.jpg" alt="foto 2">
-      <img src="foto3.jpg" alt="foto 3">
-    </div>
+    <h1>¡Hola amor! 💕</h1>
+    <p>¿Quieres ser mi San Valentín?</p>
 
     <div class="buttons">
-      <button id="yes" onclick="acepta()">Sí 💖</button>
-      <button id="no">No 🙈</button>
+      <button id="yes" onclick="acepta()">Sí, claro que sí 💖</button>
+      <button id="no">No</button>
     </div>
   </div>
 
   <script>
-    const noBtn = document.getElementById('no');
+    const noBtn = document.getElementById("no");
 
-    noBtn.addEventListener('mouseover', () => {
-      const x = Math.random() * (window.innerWidth - 100);
-      const y = Math.random() * (window.innerHeight - 50);
-      noBtn.style.left = x + 'px';
-      noBtn.style.top = y + 'px';
+    noBtn.addEventListener("mouseover", () => {
+      const x = Math.random() * (window.innerWidth - 120);
+      const y = Math.random() * (window.innerHeight - 60);
+      noBtn.style.left = x + "px";
+      noBtn.style.top = y + "px";
     });
 
     function acepta() {
       document.body.innerHTML = `
-        <div style="display:flex;justify-content:center;align-items:center;height:100vh;text-align:center;font-family:Arial;background:linear-gradient(135deg,#ff9a9e,#fad0c4)">
+        <div style="
+          height:100vh;
+          display:flex;
+          justify-content:center;
+          align-items:center;
+          text-align:center;
+          background:linear-gradient(135deg,#ff9a9e,#fad0c4);
+          font-family:Arial;
+        ">
           <div>
-            <h1 style="color:#e11d48">💞 Sabía que dirías que sí 💞</h1>
-            <p>Eres la mejor persona del mundo</p>
+            <h1>💘 Sabía que dirías que sí 💘</h1>
+            <p>Eres lo mejor que me ha pasado</p>
           </div>
         </div>
       `;
